# pq-lang

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO  acerteNumero.lisp  hellfire  precisaImplementar.md
design/: arquitetura.md  coisas-que-precisam-saber.md  funcoes.md  ideaLog.md  index.md  influencias.md  llvm.md  memoria.md  overloads.md  sistema-de-tipos.md  syntax.md  tipos.md  todo.md  variaveis.md
include/: Atom.hpp  AtomFactory.hpp  AtomPool.hpp  Code.hpp  Cons.hpp  CppFunc.hpp  CppType.hpp  Env.hpp  Exception.hpp  ForwardStack.hpp  Func.hpp  Int.hpp  List.hpp  Real.hpp  Scope.hpp  StringPool.hpp  Symbol.hpp  Table.hpp  Type.hpp  debug.hpp  pq.h  pq.hpp
include/pq/: array.h  assert.h  builtin.h  cons.h  context.h  function.h  list.h  memory_manager.h  overload.h  parser.h  scope.h  scope_queue.h  scope_stack.h  symbol.h  type.h  type_manager.h  utils.h  value.h
old-stuff-for-reference/: Doxyfile  acerteNumero.lisp
old-stuff-for-reference/cmake/: FindJudy.cmake  FindReplxx.cmake
old-stuff-for-reference/design/: memoria.md
old-stuff-for-reference/include/pq/: assert.h  overload.h  parser.h  scope.h  scope_stack.h  type.h  value.h
old-stuff-for-reference/src/: CMakeLists.txt  context.c  function.c  memory_manager.c  utils.c
old-stuff-for-reference/src/core/: call.c  eval.c  int.c  tuple.c
old-stuff-for-reference/src/cstd/: ctype.c
prototype/: atom_rules.lua  context.lua  main.lua  parser.lua  utils.lua
prototype/parser/: atom_rules.lua  grammar.lua
prototype/spec/: atom_rules_spec.lua  parser_spec.lua
src/: Atom.cpp  AtomFactory.cpp  AtomPool.cpp  CMakeLists.txt  Code.cpp  Cons.cpp  CppFunc.cpp  CppType.cpp  Env.cpp  Exception.cpp  Func.cpp  Int.cpp  List.cpp  Scope.cpp  StringPool.cpp  Symbol.cpp  Table.cpp  Type.cpp  builtin.c  context.c  function.c  hellfire  list.c  main.c  main.cpp  main.lua  memory_manager.c  overload.c  parser.c  scope.c  scope_queue.c  scope_stack.c  sintaxeTeste.pq  symbol.c  teste.pq  type.c  type_manager.c  utils.c  value.c
src/core/: call.c  core.h  eval.c  int.c  list.c  print.c  tuple.c  type.c  value.c
src/cstd/: ctype.c
src/pq/: environment.lua  macro.lua  parser.lua  reader.lua  scope.lua  type.lua
src/pq/core/: init.lua  readers.lua  types.lua
src/pq/prelude/: init.lua
